--- a/ProjInterdisc/ProjInterdisc-war/web/orcamento/css/estilo_orcamento.css
+++ b/ProjInterdisc/ProjInterdisc-war/web/orcamento/css/estilo_orcamento.css
@@ -59,3 +59,16 @@ header{
     width: 1000px;
     
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #a1a1a1;
+}
+
+tr:hover{background-color:#f5f5f5}
