--- a/ProjInterdisc/ProjInterdisc-war/web/css/estilo_orcamento.css
+++ b/ProjInterdisc/ProjInterdisc-war/web/css/estilo_orcamento.css
@@ -26,7 +26,7 @@ body{
 
 header{
     
-    background-color: #34495E;
+    background-color: #607D8B;
     display:flex;
     justify-content: space-around;
     align-items: center;
