--- a/ProjInterdisc/ProjInterdisc-war/web/css/estilo_orcamento.css
+++ b/ProjInterdisc/ProjInterdisc-war/web/css/estilo_orcamento.css
@@ -14,7 +14,7 @@ and open the template in the editor.
 *{
     box-sizing: border-box;    
     margin:0;
-    font-family: 'Roboto', sans-serif;  
+    font-family: 'Roboto';  
 }
 
 body{
@@ -40,13 +40,10 @@ header{
 }
  
 #main{
-    margin: 10px;
-    margin-left:  200px;
-    margin-right:  200px;
-    background-color: #ecf0f1;
-    min-height: 78.5%;
+    width: 100%;
     display:flex;
-    justify-content: flex-start;
+    justify-content: center;
+    margin-bottom: 25px;
     
 }
 
@@ -71,4 +68,35 @@ th, td {
     border-bottom: 1px solid #a1a1a1;
 }
 
+img{
+    width: 5%;
+    height: 5%;
+    
+}
+
+
+
+
+nav{
+    margin-bottom: 50px;
+    
+}
+
+#botao{
+    
+    right:5px;
+    text-decoration: none;
+    padding:8px;
+    color:#a1a1a1;
+}
+#botao2{
+    
+    right:5px;
+    text-decoration: none;
+    padding:8px;
+    color:#a1a1a1;
+}
+
+#botao:hover{background-color:#34495E}
+#botao2:hover{background-color:#34495E}
 tr:hover{background-color:#f5f5f5}
